# ralphEdisplay

./: CMakeLists.txt  README.md  backend.cpp  backend.h  config.json  main.cpp  main.qml
fonts/: .SpaceMonoNerdFont-Regular.ttf.kate-swp
